--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -629,107 +629,107 @@ stories:
   domain: http://www.newsleader.com/
   link: https://www.fbnewsleader.com/community-links/amelia-island-museum-history
 images:
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-umberto-bocc.jpg
-- name: white-house-whitehouse-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-alberto-giacometti.jpg
-- name: aws-s3-royalroads-royalroads-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-royalroads-royalroads-still-600.jpg
-- name: old-door-lock-old-door-lock-2-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-light-dali.jpg
-- name: razorwire-DSC-0080-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-atari-missle.jpg
-- name: nazi-invasion-old-comuter-wheels-crypto.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-comuter-wheels-crypto.jpg
-- name: castle-wall-DSC-0067-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-rain.JPG
-- name: downtown-los-angeles-downtown-la-satan-red.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-satan-red.JPG
-- name: border-fence-border-fence-on-hill-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-gan-vogh.jpg
-- name: rain-princess-building-shadows-sun.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-building-shadows-sun.jpg
-- name: flower-barbed-wire-flower-barbed-wire-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-copper-circuit.jpg
-- name: beach-clouds-lifeguard-beachclouds-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-monet-one.jpg
-- name: liberty-back-statue-liberty-back-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-kand-two.jpg
-- name: lincoln-memorial-lincolnmemorial-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-green-zuma.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
-- name: machine-road-machine-road-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-creativity.jpg
-- name: powerlines-power-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-brush.jpg
-- name: white-house-lawn-white-house-window-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-pablo-blue.jpg
-- name: nyc-flag-nycflag-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-emily-carr.jpg
-- name: locked-up-steam-lock-up-steam-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-free-woman.jpg
-- name: copper-circuit-old-train-on-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-train-on-tracks.jpg
-- name: udnie-IMG_8352.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8352.jpg
-- name: carry-load-carryload-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-satan-red.jpg
-- name: blossombar-plentiful-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-plentiful-file-00-00-24-99.jpg
-- name: old-church-oldchurch-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-spagetti-accident.jpg
-- name: border-crossing-bordercrossing-crunch-paper.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-crunch-paper.png
-- name: wind-mills-windmills-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colorful-dream.jpg
-- name: aws-s3-square-file-00-00-00-00-smith-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-00-00-smith-square.jpg
-- name: mosaic-face-mosaic-face-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purp-paper.jpg
-- name: yosemite-yosemite-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-space-pizza.jpg
-- name: old-door-lock-old-door-lock-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-copper-circuit-2.jpg
-- name: server-cloud-server-racks-clouds-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-green-zuma.jpg
-- name: bluelake-neo-instinct-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-00-38-67.jpg
-- name: old-cabin-oldcabin-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-granite.jpg
-- name: stalin-time-desert-road-mountains.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-desert-road-mountains.jpg
-- name: oldhotel-oldhotel-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-sunday.jpg
-- name: oldhouse-oldhouse-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-atari-missle.jpg
-- name: aws-s3-square-schoolhouse-dark-dali-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-schoolhouse-dark-dali-square.jpg
-- name: bordercrossing-bordercrossing-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-plentiful.jpg
-- name: walled-garden-walled-garden-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-diego-rivera1.jpg
-- name: christianity-christianity-under-construction-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-graham-sutherland.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-far-away.jpg
-- name: apartment-window-apartment-window-leaves.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/apartment-window-apartment-window-leaves.jpg
-- name: downtown-trucksilo-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-purple-pond.jpg
-- name: machine-road-machine-road-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-kandinsky-bv.jpg
-- name: downtown-la-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-light-dali.jpg
-- name: adam-smith-adam-smith-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-marcel-duchamp.jpg
-- name: nazi-invasion-girl-reading-garden-flowers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-girl-reading-garden-flowers.jpg
-- name: subway-subway-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-smoking-cigarette.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-really-hot.jpg
-- name: containership-containership-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-dali.jpg
+- name: razorwire-DSC-0080.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080.jpg
+- name: downtown-fredericksburg-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-atari-missle.JPG
+- name: school-clouds-church-clouds-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-china-prop.jpg
+- name: bf-skinner-through-berlin-wall.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-through-berlin-wall.jpg
+- name: yuma-bank-yuma-bak-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-circuit-3.jpg
+- name: abe-lincoln-one-post-modern-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-15-87.jpg
+- name: ellis-island-ellis-island-room-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-oily-mcoilface.jpg
+- name: store-on-corner-oldcabin-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-kandinsky-bv.jpg
+- name: oldtrain-oldtrain-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-neo-instinct.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-dry-skin.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-dry-skin.png
+- name: beach-clouds-lifeguard-beachclouds-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-emily-carr.jpg
+- name: carry-load-carryload-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-diego-rivera1.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-purple-storm.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purple-storm.JPG
+- name: castle-on-hill-castle-on-hill-edinburgh-green-zuma.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-green-zuma.JPG
+- name: server-cloud-server-racks-clouds-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-satan-red.jpg
+- name: status-berlin-status-berlin-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-hot-spicy.jpg
+- name: amusement-park-amusement-park-2-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colored-circuits.jpg
+- name: stories-new-65-144-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-65-144-800-500-0-max-0-1--1.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sand-paper.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-far-away.jpg
+- name: old-door-lock-old-door-lock-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-atari-missle.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-yellow-collage.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
+- name: white-house-whitehouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-far-away.jpg
+- name: beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-oily-mcoilface.jpg
+- name: white-house-whitehouse-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-monet-one.jpg
+- name: berlinwall-DSC-0084-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-gan-vogh.jpg
+- name: crow-crow-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-deep-connections.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-gan-vogh.jpg
+- name: amusement-park-amusement-park-2-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-mucha-mult.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-soul.jpg
+- name: store-on-corner-oldcabin-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-kand-two.jpg
+- name: death-valley-death-valley-national-park-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-kandinsky-bv.jpg
+- name: fence-fence-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crabapple.jpg
+- name: statue-of-liberty-front-view-statueofliberty-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-light-dali.jpg
+- name: fence-gorilla-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-gorilla-blue-circuit.jpg
+- name: bluelake-creativity-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-creativity-file-00-00-38-67.jpg
+- name: windowmountain-window-mountain-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-clean-view.jpg
+- name: miamibeach-miamibeach-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-far-away.jpg
+- name: old-granary-field-oldhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-really-hot.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dry-skin.jpg
+- name: ellis-island-ellis-island-room-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-spagetti-accident.jpg
+- name: bf-skinner-downtown-berlin-crowds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-downtown-berlin-crowds.jpg
+- name: berlinwall2-berlinwall-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-atari-missle.jpg
+- name: fence-mexico-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crunch-paper.jpg
+- name: powerlines-power-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-really-hot.jpg
+- name: nazi-invasion-miami-beach-tower-city.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-miami-beach-tower-city.jpg
+- name: miamibeach-miamibeach-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-yellow-paper.jpg
+- name: carry-load-carryload-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crafty-painting.jpg
+- name: miamibeach-miamibeach-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-crafty-painting.jpg
+- name: carry-load-carryload-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purple-storm.jpg
 ---
 Alsbrook Presented Order Of The Long Leaf Pine.&nbsp;Brooklet Family Loses All In Fire.&nbsp;Lake Roosevelt Wrestlers Place In Cashmere Tourney.&nbsp;HPEs Commitment To Protecting Human Rights.&nbsp;Minnesota Gun Control Bills' Fate To Be Hashed Out In Hibbing.&nbsp;Video Of The Week.&nbsp;Giving Santa A Run For His Money.&nbsp;Loudoun County Couple Charged With Embezzling From Youth Soccer Club.&nbsp;
